# macro-galois-field

./: Cargo.toml
src/: lib.rs
tests/: impl_trait.rs  test_builds.rs
tests/builds/: error_expand.rs  error_expand2.rs  expand.rs
