[package]
name = "macro-galois-field"
version = "0.1.0"
authors = ["hamadakafu <kafu.h1998@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
description = "macro galois field"

[lib]
proc-macro = true

[dependencies]
syn = { version =  "0.15", features = ["extra-traits", "full"] }
proc-macro2 = "0.4"
quote = "0.6"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
num-traits = "*"
